# internal/dto/nlv_request.go
@@ -1,5 +1,6 @@
 package dto
 
 type NLVQueryRequest struct {
-	Query string `json:"query" binding:"required"`
+	Query          string  `json:"query" binding:"required"`
+	ConversationId *string `json:"conversationId,omitempty"`
 }
